--- a/Ch02/02_02/start/index.html
+++ b/Ch02/02_02/start/index.html
@@ -11,6 +11,6 @@
 	<title>Working with Babel</title>
 </head>
 <body>
-
+<!-- Comment only to commit, I have worked on this file -->
 </body>	
 </html>
