--- a/Ch02/02_02/start/index.html
+++ b/Ch02/02_02/start/index.html
@@ -3,7 +3,7 @@
 <head>
 	<script type="text/javascript">
 		var nameBuilder = function(firstName="John", lastName="Doe") {
-			console.log(firstName + " " + lastName);
+			console.log(`Hello ${firstName}`);
 		};
 
 		nameBuilder();
