template string expressions

--- a/Ch02/02_02/start/index.html
+++ b/Ch02/02_02/start/index.html
@@ -2,8 +2,18 @@
 <html>
 <head>
 	<script type="text/javascript">
-		var nameBuilder = function(firstName="John", lastName="Doe") {
+		var nameBuilder = function(firstName="John", purshasePrice=100) {
+            var shipping = 5.95;
 			console.log(`Hello ${firstName}`);
+            console.log(
+            `Hi ${firstName}, 
+
+                Thanks for buying from us!
+                Purchase Price: $${purshasePrice}
+                Shipping      : $${shipping}
+                Total         : $${purshasePrice + shipping}
+    
+        `);
 		};
 
 		nameBuilder();
