--- a/Ch02/02_02/start/index.html
+++ b/Ch02/02_02/start/index.html
@@ -3,6 +3,7 @@
 <head>
 	<script type="text/javascript" src="default-params.js"></script>
     <script src="spread.js"></script>
+    <script src="array-times.js"></script>
 	<title>Working with Babel</title>
 </head>
 <body>
