--- a/Ch02/02_02/start/index.html
+++ b/Ch02/02_02/start/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+    
 	<script type="text/javascript" src="default-params.js"></script>
     <script src="spread.js"></script>
     <script src="array-times.js"></script>
+    <script src="arrow.js"></script>
 	<title>Working with Babel</title>
 </head>
 <body>
