--- a/Ch02/02_02/start/index.html
+++ b/Ch02/02_02/start/index.html
@@ -6,6 +6,7 @@
     <script src="spread.js"></script>
     <script src="array-times.js"></script>
     <script src="arrow.js"></script>
+    <script src="destructuring.js"></script>
 	<title>Working with Babel</title>
 </head>
 <body>
